--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,8 @@ spring:
       min-idle: 1
       test-on-borrow: true
       test-on-return: true
+  thymeleaf:
+    mode: HTML5
 
 mybatis:
   mapper-locations: classpath*:stu/swufe/fhl/demo/mapper/*Mapper.xml
